# Lidar_Localization_RQ

./: .gitignore  CMakeLists.txt  readme.md
cmake/: YAML.cmake  g2o.cmake  geographic.cmake
config/back_end/: config.yaml
config/front_end/: config.yaml
config/loop_closing/: config.yaml
config/matching/: config.yaml
config/viewer/: config.yaml
include/lidar_localization/data_preprocessing/: data_preprocessing_flow.hpp
include/lidar_localization/data_pretreat/: data_pretreat_flow.hpp
include/lidar_localization/front_end/: front_end.hpp  front_end_flow.hpp
include/lidar_localization/mapping/back_end/: back_end.hpp  back_end_flow.hpp
include/lidar_localization/matching/: matching_flow.hpp
include/lidar_localization/publisher/: cloud_publisher.hpp  cloud_publisher.hpp.back  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  odometry_publisher.hpp
include/lidar_localization/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  pose_data.hpp  velocity_data.hpp
include/lidar_localization/subscriber/: cloud_subscriber.hpp  key_frame_subscriber.hpp  key_frames_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
include/lidar_localization/tf_listener/: tf_listener.hpp
include/lidar_localization/tools/: file_manager.hpp  tic_toc.hpp
launch/: back_end.launch  data_preprocessing.launch  front_end.launch  mapping.launch  mapping_test.launch  matching.launch  viewer.launch
rviz/: front_end.rviz  mapping.rviz  matching.rviz  matching_gwh.rviz
src/: front_end_node.cpp  test_frame_node.cpp
src/app/: back_end_node.cpp  data_preprocessing_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  loop_closing_node.cpp  matching_node.cpp  test_frame_node.cpp  viewer_node.cpp
src/data_preprocessing/: data_preprocessing_flow.cpp
src/data_pretreat/: data_pretreat_flow.cpp
src/front_end/: front_end.cpp  front_end_flow.cpp
src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
src/mapping/loop_closing/: loop_closing.cpp  loop_closing_flow.cpp
src/mapping/viewer/: viewer.cpp  viewer_flow.cpp
src/matching/: matching.cpp  matching_flow.cpp
src/models/cloud_filter/: box_filter.cpp  no_filter.cpp  voxel_filter.cpp
src/models/graph_optimizer/: interface_graph_optimizer.cpp
src/models/registration/: ndt_registration.cpp
src/models/scan_adjust/: distortion_adjust.cpp
src/publisher/: cloud_publisher.cpp  key_frame_publisher.cpp  key_frames_publisher.cpp  odometry_publisher.cpp
src/sensor_data/: gnss_data.cpp  imu_data.cpp  key_frame.cpp  pose_data.cpp  velocity_data.cpp
src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  key_frame_subscriber.cpp  key_frames_subscriber.cpp  odometry_subscriber.cpp  velocity_subscriber.cpp
src/tf_listener/: tf_lisener.cpp
src/tools/: file_manager.cpp
test/: read_trajectory_and_mapping.cpp
(+17 files in other folders)
